// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has different relation types 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads must have the same relation type",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "An error occurred.",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has invalid relation payload 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation input transpilation failed",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Invalid morph relation input",
      },
      "value": [
        {
          "targetObjectMetadataId": Any<String>,
          "type": "ONE_TO_MANY",
        },
      ],
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has several references to same object metadata 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads must have only relation to the same object metadata",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "An error occurred.",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is empty array 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation creation payloads are empty",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "At least one relation is require",
      },
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is missing 1`] = `
{
  "errors": [
    {
      "code": "INVALID_FIELD_INPUT",
      "message": "Relation creation payload is required",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Relation creation payload is required",
      },
      "value": undefined,
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when target object metadata is not found 1`] = `
{
  "errors": [
    {
      "code": "FIELD_METADATA_RELATION_MALFORMED",
      "message": "Morph relation input transpilation failed",
      "userFriendlyMessage": {
        "id": Any<String>,
        "message": "Invalid morph relation input",
      },
      "value": [
        {
          "targetFieldIcon": "IconPet",
          "targetFieldLabel": "Pet",
          "targetObjectMetadataId": Any<String>,
          "type": "ONE_TO_MANY",
        },
      ],
    },
  ],
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Success cases should create morph relation field metadata with valid input on rocket object to pet object 1`] = `
{
  "result": {
    "flatFieldMetadatas": [
      {
        "applicationUniversalIdentifier": Any<String>,
        "calendarViewUniversalIdentifiers": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconRelationOneToMany",
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewUniversalIdentifiers": [],
        "label": "newFieldLabel",
        "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
        "morphId": Any<String>,
        "name": "newFieldPets",
        "objectMetadataUniversalIdentifier": Any<String>,
        "options": null,
        "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
        "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "universalSettings": {
          "relationType": "ONE_TO_MANY",
        },
        "updatedAt": Any<String>,
        "viewFieldUniversalIdentifiers": [],
        "viewFilterUniversalIdentifiers": [],
      },
      {
        "applicationUniversalIdentifier": Any<String>,
        "calendarViewUniversalIdentifiers": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconPet",
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewUniversalIdentifiers": [],
        "label": "Pet",
        "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
        "morphId": null,
        "name": "pet",
        "objectMetadataUniversalIdentifier": Any<String>,
        "options": null,
        "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
        "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "universalSettings": {
          "joinColumnName": "petId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "updatedAt": Any<String>,
        "viewFieldUniversalIdentifiers": [],
        "viewFilterUniversalIdentifiers": [],
      },
      {
        "applicationUniversalIdentifier": Any<String>,
        "calendarViewUniversalIdentifiers": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconRelationOneToMany",
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewUniversalIdentifiers": [],
        "label": "newFieldLabel",
        "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
        "morphId": Any<String>,
        "name": "newFieldCompanies",
        "objectMetadataUniversalIdentifier": Any<String>,
        "options": null,
        "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
        "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "universalSettings": {
          "relationType": "ONE_TO_MANY",
        },
        "updatedAt": Any<String>,
        "viewFieldUniversalIdentifiers": [],
        "viewFilterUniversalIdentifiers": [],
      },
      {
        "applicationUniversalIdentifier": Any<String>,
        "calendarViewUniversalIdentifiers": [],
        "createdAt": Any<String>,
        "defaultValue": null,
        "description": "new field description",
        "icon": "IconBuilding",
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": false,
        "kanbanAggregateOperationViewUniversalIdentifiers": [],
        "label": "Company",
        "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
        "morphId": null,
        "name": "company",
        "objectMetadataUniversalIdentifier": Any<String>,
        "options": null,
        "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
        "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "universalSettings": {
          "joinColumnName": "companyId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "updatedAt": Any<String>,
        "viewFieldUniversalIdentifiers": [],
        "viewFilterUniversalIdentifiers": [],
      },
    ],
    "indexMetadatas": [
      {
        "applicationUniversalIdentifier": Any<String>,
        "createdAt": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_f687e4e4252800dddd8e5518362",
        "objectMetadataUniversalIdentifier": Any<String>,
        "universalFlatIndexFieldMetadatas": [
          {
            "createdAt": Any<String>,
            "fieldMetadataUniversalIdentifier": Any<String>,
            "indexMetadataUniversalIdentifier": Any<String>,
            "order": 0,
            "updatedAt": Any<String>,
          },
        ],
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
      },
      {
        "applicationUniversalIdentifier": Any<String>,
        "createdAt": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_cb15d901e889e25d0a9acecb595",
        "objectMetadataUniversalIdentifier": Any<String>,
        "universalFlatIndexFieldMetadatas": [
          {
            "createdAt": Any<String>,
            "fieldMetadataUniversalIdentifier": Any<String>,
            "indexMetadataUniversalIdentifier": Any<String>,
            "order": 0,
            "updatedAt": Any<String>,
          },
        ],
        "universalIdentifier": Any<String>,
        "updatedAt": Any<String>,
      },
    ],
  },
  "status": "success",
}
`;
